--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -12,7 +12,7 @@
   <title>Letmeask</title>
 </head>
 
-<body>
+<body class="dark">
   <div id="app"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
