--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -7,6 +7,9 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-tsrouter-app" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
   <title>Letmeask</title>
